src/objects/tdc_tsw__Message__c.object
<CustomObject>
    <fields>
        <fullName>Call_List_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call List Member</label>
        <referenceTo>TR1__Call_List_Member__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Attached_Files_c__c</fullName>
        <formula>IF(ISBLANK(tdc_tsw__Attachments_Ids__c), &quot;&quot;, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(tdc_tsw__Attachments_Ids__c,18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(tdc_tsw__Attachments_Ids__c,31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;1, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;2, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;3, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)), 31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;4, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)+1)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)+1)), 31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;5, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,32),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c, 13),12),&apos;&apos;)),&quot;&quot;),&quot;&quot;),&quot;&quot;),&quot;&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attached Files</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Attachments_Ids__c</fullName>
        <description>Attachments_Ids</description>
        <label>Attachments Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Clicks__c</fullName>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Community_Attached_Files_Primary__c</fullName>
        <description>This field is used for showing the attachment for community and it contains the first three attachment files.</description>
        <formula>IF(ISBLANK(tdc_tsw__Attachments_Ids__c), &quot;&quot;,
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(tdc_tsw__Attachments_Ids__c,18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(tdc_tsw__Attachments_Ids__c,31),12),&apos;&apos;))&amp;&quot; &quot;&amp;

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;1,
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),31),12),&apos;&apos;))&amp;&quot; &quot;&amp;

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;2,
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),31),12),&apos;&apos;)),&quot;&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Attached Files Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Community_Attached_Files_Secondary__c</fullName>
        <description>This field is used for showing the attachment for community and it contains Fourth and Fifth attachment files.</description>
        <formula>IF(ISBLANK(tdc_tsw__Attachments_Ids__c), &quot;&quot;, 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;3, 
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)),18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)), 31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;4, 
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)+1)),18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)+1)), 31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;5, 
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,32),18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c, 13),12),&apos;&apos;)),&quot;&quot;),&quot;&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Attached Files Secondary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Delivered_SMS__c</fullName>
        <formula>IMAGE( IF( AND(tdc_tsw__Delivered__c == true, Name == &apos;Outgoing&apos;),LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/tdc_tsw__imageCheck2&apos;,LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/tdc_tsw__imageCancel1&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivered SMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check, if the message is delivered to the customer or not.</description>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Delivery_Status__c</fullName>
        <formula>IF(tdc_tsw__Delivered__c , &quot;Delivered&quot;, If(ISBLANK(tdc_tsw__Error_Code__c), &quot;Sent&quot;, &quot;Undelivered&quot;))</formula>
        <label>Delivery Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Event_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Event_Id__c</fullName>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__FeedElementId__c</fullName>
        <label>FeedElementId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__First_Click__c</fullName>
        <label>First Click</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Important__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Important</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Incoming_Status__c</fullName>
        <formula>IF(tdc_tsw__Read__c , &quot;Read&quot;, &quot;Not Read&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status of Incoming Messages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Is_Keyword_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Keyword Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Last_Click__c</fullName>
        <label>Last Click</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__MessageId__c</fullName>
        <label>MessageId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Message_Segment__c</fullName>
        <label>Message Segment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Message_Text_New__c</fullName>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS History</label>
        <referenceTo>tdc_tsw__Message__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>Message</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>tdc_tsw__Question__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Read_Status__c</fullName>
        <formula>IF( tdc_tsw__Read__c = true, &quot;Read&quot;, &quot;Unread&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Incoming_Owner__c</fullName>
        <description>Used for Incoming SMS Owner</description>
        <label>Related Incoming Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outgoing Owner</fullName>
                </value>
                <value>
                    <fullName>Parent Record Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object_Id_URL__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;   tdc_tsw__Related_Object_Id__c  ,  tdc_tsw__Sender_Name__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object_Id__c</fullName>
        <label>Related Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Reply_Code__c</fullName>
        <description>In case of auto forward to user phone, user use this reply code while replying for the particular SMS.</description>
        <label>Reply Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Template</label>
        <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sender_Number__c</fullName>
        <label>Sender Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Short_Text__c</fullName>
        <label>Short Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Response</label>
        <referenceTo>tdc_tsw__Survey_Response__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Task_Id__c</fullName>
        <label>Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Template_Parse_Id__c</fullName>
        <label>Template Parse Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__ToNumber__c</fullName>
        <label>To Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Url__c</fullName>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__isCaseCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCaseCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__isLeadCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLeadCreated</label>
        <type>Checkbox</type>
    </fields>
    <label>SMS History</label>
    <listViews>
        <fullName>Outgoing_SMS_Emma_R</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Sender_Name__c</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>tdc_tsw__ToNumber__c</columns>
        <columns>tdc_tsw__Delivered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Outgoing</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Emily</value>
        </filters>
        <filters>
            <field>tdc_tsw__Created_Date__c</field>
            <operation>equals</operation>
            <value>3/5/2020 12:00 AM</value>
        </filters>
        <label>Outgoing SMS Emma R</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Outgoing_SMS_KAine</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>tdc_tsw__ToNumber__c</columns>
        <columns>tdc_tsw__Delivered__c</columns>
        <columns>tdc_tsw__Sender_Number__c</columns>
        <columns>tdc_tsw__Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Outgoing</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Kaine Milner</value>
        </filters>
        <filters>
            <field>tdc_tsw__Contact__c</field>
            <operation>equals</operation>
            <value>Thomas Graham,June (Sheron) Cockburn</value>
        </filters>
        <label>Outgoing SMS KAine</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Outgoing_SMS_This_Week</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>tdc_tsw__Sender_Number__c</columns>
        <columns>tdc_tsw__ToNumber__c</columns>
        <columns>tdc_tsw__Read__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Outgoing</value>
        </filters>
        <label>Outgoing SMS (This Week)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>overseas_SMS1</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>tdc_tsw__ToNumber__c</columns>
        <columns>tdc_tsw__Delivered__c</columns>
        <columns>tdc_tsw__Sender_Number__c</columns>
        <columns>tdc_tsw__Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Outgoing</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Incoming</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>erob,kgibs,rauld,gscot,jtich,jarr</value>
        </filters>
        <label>Overseas SMS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__All</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>tdc_tsw__ToNumber__c</columns>
        <columns>tdc_tsw__Sender_Number__c</columns>
        <columns>tdc_tsw__Created_Date__c</columns>
        <columns>tdc_tsw__Delivered_SMS__c</columns>
        <columns>tdc_tsw__Delivered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Incoming_SMS</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>tdc_tsw__Sender_Number__c</columns>
        <columns>tdc_tsw__ToNumber__c</columns>
        <columns>tdc_tsw__Read__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Incoming</value>
        </filters>
        <label>Incoming SMS</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Outgoing_SMS</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>tdc_tsw__ToNumber__c</columns>
        <columns>tdc_tsw__Delivered__c</columns>
        <columns>tdc_tsw__Sender_Number__c</columns>
        <columns>tdc_tsw__Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Outgoing</value>
        </filters>
        <label>Outgoing SMS</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Unread_Incoming_SMS</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Message_Text_New__c</columns>
        <columns>tdc_tsw__Read__c</columns>
        <columns>tdc_tsw__Related_Object_Id_URL__c</columns>
        <columns>tdc_tsw__Sender_Number__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Incoming</value>
        </filters>
        <filters>
            <field>tdc_tsw__Read__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unread Incoming SMS</label>
    </listViews>
    <nameField>
        <label>SMS Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <recordTypes>
        <fullName>tdc_tsw__Incoming</fullName>
        <active>true</active>
        <label>Incoming</label>
    </recordTypes>
    <recordTypes>
        <fullName>tdc_tsw__Outgoing</fullName>
        <active>true</active>
        <label>Outgoing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>